nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: docreg.gvllab.windstream.net/docker-nginx-helloworld:$VERSION
        name: nginx
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: regsecret
status: {}
