kubernetes-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: kubernetes
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
    name: https
  type: LoadBalancer
