nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 80
  selector:
    io.kompose.service: nginx
  type: LoadBalancer
status:
  loadBalancer: {}
