kub-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: operator-dev.gvllab.windstream.net
    http:
      paths:
      - backend:
          serviceName: kubernetes
          servicePort: 443
